feat: footer 컴포넌트 ui 구현

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 
   --color-rd-500: #f62d2d;
 
+  --color-gy-50: #f9fafb;
   --color-gy-100: #f4f5f6;
   --color-gy-200: #e4e7ea;
   --color-gy-300: #d6dae0;
