--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,8 @@
   /* Background Blur */
   --blur-bg: 20px;
 
+  --Gaps-Vertical-Section: 32px;
+
   /* 폰트 패밀리 */
   --font-family-suit:
     "SUIT Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -353,12 +355,18 @@
   .bg-white-50 {
     background-color: var(--color-white-50);
   }
+
+  .gap-vertical-section {
+    gap: var(--Gaps-Vertical-Section);
+  }
 }
 
 html {
   height: 100%;
   font-size: clamp(16px, 4vw, 18px);
   background-color: lightgray;
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
 }
 /* 전체 앱에 기본 폰트 적용 (선택사항) */
 body {
@@ -369,6 +377,14 @@ body {
     BlinkMacSystemFont,
     "Segoe UI",
     sans-serif;
+  overscroll-behavior-y: none;
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 .swiper-pagination-bullet {
   @apply bg-gy-500 size-2 rounded-full;
