feat: div 태그 스크롤바 숨김

--- a/src/index.css
+++ b/src/index.css
@@ -382,8 +382,14 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+div {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 html::-webkit-scrollbar,
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+div::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
 .swiper-pagination-bullet {
