--- a/src/index.css
+++ b/src/index.css
@@ -361,35 +361,39 @@
   }
 }
 
+@layer utilities {
+  .scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+}
+
 html {
   height: 100%;
   font-size: clamp(16px, 4vw, 18px);
   background-color: lightgray;
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
 }
 /* 전체 앱에 기본 폰트 적용 (선택사항) */
 body {
   height: 100%;
+  overscroll-behavior-y: none;
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
   font-family:
     "SUIT Variable",
     -apple-system,
     BlinkMacSystemFont,
     "Segoe UI",
     sans-serif;
-  overscroll-behavior-y: none;
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-div {
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
 }
 
 html::-webkit-scrollbar,
-body::-webkit-scrollbar,
-div::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
 .swiper-pagination-bullet {
