feat: 운동 추천 페이지 ui

--- a/src/index.css
+++ b/src/index.css
@@ -380,12 +380,13 @@ html {
   -ms-overflow-style: none; /* IE, Edge */
   scrollbar-width: none; /* Firefox */
 }
+html::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
 /* 전체 앱에 기본 폰트 적용 (선택사항) */
 body {
   height: 100%;
   overscroll-behavior-y: none;
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
   font-family:
     "SUIT Variable",
     -apple-system,
