feat: /MyPage/MyMedal/Detail UI(props X)

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   text-align: center;
 }
 
+textarea.auto-resizing-css {
+  resize: none; 
+  overflow-y: hidden; 
+  max-height: 11.75rem;
+  min-height: 1.5rem;   
+  field-sizing: content; 
+}
 /* .logo {
   height: 6em;
   padding: 1.5em;
